# MovieManagerViorelia

./: CMakeLists.txt  README.md  main.cpp
includes/UndoRedoService/: UndoRedoService.h
src/Exceptions/: Exceptions.cpp
src/UndoRedoService/: UndoRedoService.cpp
src/gui/: mainwindow.h  tableView.h
src/ui/: ui.cpp
src/validators/: MovieValidator.cpp
